--- a/ContactManagerStarter/ContactManagerStarter.csproj
+++ b/ContactManagerStarter/ContactManagerStarter.csproj
@@ -18,4 +18,6 @@
     </PackageReference>
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties wwwroot_4lib_4bootstrap_4dist_4js_4bootstrap_1bundle_1js_1map__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
